crates/alder-solve/tests/snapshots/inference__arbitrary_tuple_and_array.snap
---
source: crates/alder-solve/tests/inference.rs
description: "let values = [(1, true, \"three\")]"
---
values: Array[(Number, Bool, String)]
