crates/alder-solve/tests/snapshots/inference__await_infers_a_task_return_without_an_explicit_wrapper.snap
---
source: crates/alder-solve/tests/inference.rs
description: "#[extern(\"alder:kernel\", \"$taskSleep\")]\nfn sleep(milliseconds: Number) Task[()]\n\nfn wait() {\n    sleep(1).await\n}\n"
---
sleep: fn(Number) Task[()]
wait: fn() Task[()]
