crates/alder-solve/tests/snapshots/inference__await_inside_a_lambda_belongs_to_the_lambda.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn makeWorker() fn(Number) Task[Number] {\n    value -> async {\n        Task.sleep(1).await\n        value\n    }\n}\n\nfn staysSynchronous() Number {\n    let worker = value -> async {\n        Task.sleep(1).await\n        value\n    }\n    42\n}\n"
---
makeWorker: fn() fn(Number) Task[Number]
staysSynchronous: fn() Number
