crates/alder-solve/tests/snapshots/inference__await_unwraps_task_inside_task_function.snap
---
source: crates/alder-solve/tests/inference.rs
description: "async fn wait() () {\n    Task.sleep(1).await\n}\n"
---
wait: fn() Task[()]
