crates/alder-solve/tests/snapshots/inference__await_wraps_an_explicit_body_result_in_task.snap
---
source: crates/alder-solve/tests/inference.rs
description: "async fn load(value: Number) Result[Number] {\n    Task.sleep(1).await\n    Ok(value)\n}\n"
---
load: forall a. fn(Number) Task[Result[Number, [a]]]
