crates/alder-solve/tests/snapshots/inference__block_and_sequential_let.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn answer() {\n    let value = 40\n    value + 2\n}\n"
---
answer: fn() Number
