crates/alder-solve/tests/snapshots/inference__closed_error_match_is_exhaustive_with_every_result_case.snap
---
source: crates/alder-solve/tests/inference.rs
description: "error Failure {\n    :invalid(String),\n    :missing\n}\n\nfn render(value: Result[Number, Failure]) String {\n    match value {\n        Ok(number) => \"ok\",\n        Err(:invalid(message)) => message,\n        Err(:missing) => \"missing\",\n    }\n}\n"
---
render: fn(Result[Number, [:invalid(String) | :missing]]) String
